--- a/lab2/lab2.vcxproj
+++ b/lab2/lab2.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="template_discipline.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
