--- a/lab2/lab2.vcxproj.filters
+++ b/lab2/lab2.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="resource.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="template_discipline.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
