unit added: container_template; unit changed: discipline

--- a/lab2/lab2.vcxproj
+++ b/lab2/lab2.vcxproj
@@ -80,15 +80,18 @@
     <None Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="console_utils.h" />
+    <ClInclude Include="container_template.h" />
+    <ClInclude Include="discipline.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="template_discipline.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="discipline.cpp" />
     <ClCompile Include="lab2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
